----------------------------------------------------------------------
 OmegaT 4.3.3
----------------------------------------------------------------------
  0 Enhancements
  0 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
4.3.3 vs 4.3.1

----------------------------------------------------------------------
 OmegaT 4.3.2 (2020-01-26)
----------------------------------------------------------------------
  0 Enhancements
  1 Bug fix
  2 Localisation updates
----------------------------------------------------------------------
4.3.2 vs 4.3.1

  Bug fixes:

  - Context menu not popping up in repeated segments
  https://sourceforge.net/p/omegat/bugs/917/

  Localisation updates

  - Finnish localisation added at 4.3.2 (UI, Instant Start, scripts, readme,
    documentation)
  - Simplified Chinese localisation updated to 4.3.2 (UI, Instant Start,
    scripts, readme, documentation)

----------------------------------------------------------------------
 OmegaT 4.3.1 (2019-11-04)
----------------------------------------------------------------------
  1 Enhancement
  2 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
4.3.1 vs 4.3.0

  Implemented requests:

  - Notarize the Mac distribution
  https://sourceforge.net/p/omegat/feature-requests/1454/

  Bug fixes:

  - First Windows installation screen not translated
  https://sourceforge.net/p/omegat/bugs/957/

  - OmegaT can't access projects in macOS 10.15 Catalina
  https://sourceforge.net/p/omegat/bugs/959/

  Localisation Updates:

  - Basque localisation updated to 4.3.1 (UI, Instant Start, scripts, readme)
  - Belarusian localisation updated to 4.3.1 (UI)
  - Brazilian Portuguese localisation updated to 4.3.1 (UI, scripts)
  - Czech localisation updated to 4.3.1 (UI, scripts, documentation)
  - French localisation updated to 4.3.1 (UI)