@@ -2,10 +2,15 @@
  OmegaT 4.3.3
 ----------------------------------------------------------------------
   0 Enhancements
-  0 Bug fixes
+  1 Bug fix
   0 Localisation updates
 ----------------------------------------------------------------------
 4.3.3 vs 4.3.1
+
+  Bug fixes:
+
+  - Spelling dictionaries download site closed
+  https://sourceforge.net/p/omegat/bugs/1086/
 
 ----------------------------------------------------------------------
  OmegaT 4.3.2 (2020-01-26)
